--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,42 +1,16 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
-  "name": "uv",
-  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-  // "image": "mcr.microsoft.com/devcontainers/base:jammy",
+  "name": "Ubuntu 20.04 with CUDA 11.2 and Miniconda",
   "build": {
-    "context": "..",
     "dockerfile": "Dockerfile",
-    "args": {
-      "UV_VERSION": "latest"
-      // "DEBIAN_VERSION": "bookworm"
-    }
+    "context": ".."
   },
-
-  // Features to add to the dev container. More info: https://containers.dev/features.
-  // "features": {},
-
-  // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  // "forwardPorts": [],
-
-  // Use 'postCreateCommand' to run commands after the container is created.
-  // "postCreateCommand": "uname -a",
-
-  // Configure tool-specific properties.
   "customizations": {
     "vscode": {
-      "extensions": [
-        "charliermarsh.ruff",
-        "ms-azuretools.vscode-docker",
-        "donjayamanne.python-extension-pack",
-        "shd101wyy.markdown-preview-enhanced",
-        "yzhang.markdown-all-in-one",
-        "piotrpalarz.vscode-gitignore-generator"
-      ]
+      "settings": {
+        "terminal.integrated.shell.linux": "/bin/bash"
+      },
+      "extensions": ["ms-python.python"]
     }
   },
-  "postCreateCommand": "uv sync && uv add numpy",
-  "postStartCommand": "uv tree"
-  // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-  // "remoteUser": "root"
+  "remoteUser": "vscode"
 }
