fix: add runArgs --gpus all

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,7 @@
     "dockerfile": "Dockerfile",
     "context": ".."
   },
+  "runArgs": ["--gpus", "all"],
   "customizations": {
     "vscode": {
       "settings": {
