--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,10 +7,10 @@
   "runArgs": ["--gpus", "all"],
   "customizations": {
     "vscode": {
-      "settings": {
-        "terminal.integrated.shell.linux": "/bin/bash"
-      },
-      "extensions": ["ms-python.python"]
+      // "settings": {
+      //   "terminal.integrated.shell.linux": "/bin/bash"
+      // },
+      "extensions": ["ms-python.python@2024.12.3", "ms-python.debugpy@2024.8.0"]
     }
   },
   "remoteUser": "vscode"
