--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,14 @@
       // "settings": {
       //   "terminal.integrated.shell.linux": "/bin/bash"
       // },
-      "extensions": ["ms-python.python@2024.12.3", "ms-python.debugpy@2024.8.0"]
+      "extensions": [
+        "ms-python.python@2024.22.0",
+        "ms-python.debugpy@2024.14.0",
+        "ms-python.vscode-pylance@2025.2.1",
+        "charliermarsh.ruff",
+        "ms-python.isort",
+        "ms-vsliveshare.vslivesh"
+      ]
     }
   },
   "remoteUser": "vscode"
